[#48894507] add multilang on client

--- a/ZONE-watcher/app/assets/stylesheets/home.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/home.css.scss
@@ -33,6 +33,7 @@
   font-size: 28px;
   margin-right: 5px;
   vertical-align: -10%;
+  color: #006400;
 }
 
 #who{
@@ -51,4 +52,11 @@
 
 #who h4{
   font-size: 2em;
+}
+h4{
+  color: #006400;
+}
+
+.more-infos h1 a{
+  color: #006400;
 }
