--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -9,7 +9,7 @@
     </li>
   <% else %>
     <li class="dropdown">
-      <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+      <a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= t("menu.signIn")%> <strong class="caret"></strong></a>
       <div class="dropdown-menu" style="padding: 10px; padding-bottom: 0px;">
 
         <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
@@ -24,12 +24,12 @@
           <% end -%>
         
           <div>
-            <%= f.submit "Sign in", :class => "btn btn-primary", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;" %>
+            <%= f.submit t("menu.signIn"), :class => "btn btn-primary", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;" %>
           </div>
-          <%= link_to raw('Sign in with <b>Zone</b>'), new_user_registration_path, :class=>"btn-auth" %>
-          <%= link_to raw("Sign in with <b>Github</b>"), user_omniauth_authorize_path(:github), :class=>"btn-auth btn-github" %>
-          <%= link_to raw("Sign in with <b>Twitter</b>"), user_omniauth_authorize_path(:twitter), :class=>"btn-auth btn-twitter" %>
-          <%= link_to raw("Sign in with <b>Google</b>"), user_omniauth_authorize_path(:google_oauth2), :class=>"btn-auth btn-google" %>
+          <%= link_to raw( t("menu.signInWith")+" <b>Zone</b>"), new_user_registration_path, :class=>"btn-auth" %>
+          <%= link_to raw( t("menu.signInWith")+" <b>GitHub</b>"), user_omniauth_authorize_path(:github), :class=>"btn-auth btn-github" %>
+          <%= link_to raw( t("menu.signInWith")+" <b>Twitter</b>"), user_omniauth_authorize_path(:twitter), :class=>"btn-auth btn-twitter" %>
+          <%= link_to raw( t("menu.signInWith")+" <b>Google</b>"), user_omniauth_authorize_path(:google_oauth2), :class=>"btn-auth btn-google" %>
 
         <% end %>
       </div>
