--- a/ZONE-watcher/app/views/sources/edit.html.erb
+++ b/ZONE-watcher/app/views/sources/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing source</h1>
+<h1><%=  t("source.edit.title") %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @source %> |
-<%= link_to 'Back', sources_path %>
+<%= link_to t("show"), @source %>
