--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ZONEWatcher</title>
+  <title><%=  t("title")%></title>
   <%= include_gon %>
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap.min.css") %>
 
@@ -9,8 +9,6 @@
   <%= stylesheet_link_tag("/jquery.sexy-combo/css/sexy/sexy.css") %>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= #stylesheet_link_tag("/bootstrap/css/slate.css")
-  %>
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
 
   <%= javascript_include_tag "application" %>
@@ -34,23 +32,24 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="/">Zone - DEMO</a>
+        <a class="brand" href="/">Reador</a>
         <div class="nav-collapse collapse">
           <ul class="nav">
-            <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
-            <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to "News", items_path %></li>
-            <li class="<%= 'active' if current_page?(sources_path) %>"><%= link_to "Sources", sources_path %></li>
-            <li class="<%= 'active' if current_page?(twitter_path) %>"><%= link_to "Your twitter timeline!", twitter_path %></li>
+            <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to  t("menu.home"), root_path %></li>
+            <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to t("menu.news"), items_path %></li>
+            <li class="<%= 'active' if current_page?(sources_path) %>"><%= link_to t("menu.sources"), sources_path %></li>
+            <li class="<%= 'active' if current_page?(twitter_path) %>"><%= link_to t("menu.twitter"), twitter_path %></li>
           </ul>
         </div>
         <div class="nav-collapse collapse pull-right">
+          <%= render 'layouts/lang' %>
           <%= render 'layouts/login' %>
         </div>
       </div>
     </div>
   </div>
   <div id="follow-project">
-    <a href="http://www.zone-project.org/mailing-list/"><img class="follow-project-picture" src="/imgs/follow_me.png" alt="Fork me on GitHub"></a>
+    <a href="http://www.zone-project.org/mailing-list/"><img class="follow-project-picture" src="/imgs/follow_me.png" alt="Follow the project"></a>
   </div>
 
 
