--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
-<div class="search container">
+<div class="search clear-top">
 
 <%= render 'home/search'%>
 </div>
 </div>
+</div>
 
-<div class="splash">
+
+<div class="splash splash-off">
   <div class="container">
     <div class="text-center more-infos"><h1><a href="#"><%= raw t 'moreabout.title' %></a></h1></div>
 
