--- a/ZONE-watcher/app/assets/stylesheets/home.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/home.css.scss
@@ -13,20 +13,46 @@
     margin: 20px;
 }
 .search{
-  margin-top:150px;
+  margin: 150px auto -50px;
+}
+.container{
+  min-height: 100%;
+}
+.search{
+  overflow:auto;
+  padding-bottom:50px; /* this needs to be bigger than footer height*/
 }
 
 .splash{
   border-bottom: 1px solid #DDDDDD;
   border-top: 1px solid #DDDDDD;
   background: none repeat scroll 0 0 #F5F5F5;
-  margin-top:60px;
-  padding-top: 20px;
-  padding-bottom: 40px;
-  bottom:0px;
-  position:absolute;
+  margin-top:0px;
+  padding-top: 10px;
+  padding-left:0;
+  padding-right: 0;
   width: 100%;
 
+  position: relative;
+}
+.splash-on{
+  margin-top: auto; /* negative value of footer height */
+  height: auto;
+  clear:both;
+  padding-top:0px;
+
+}
+.splash-off{
+  margin-top: -83px; /* negative value of footer height */
+  height: 80px;
+  clear:both;
+  padding-top:0px;
+
+}
+
+
+.more-infos h1{
+  margin-bottom: 0;
 }
 
 #why h4 [class^="icon-"], #who h4 [class^="icon-"], #why h4 [class*=" icon-"], #who h4 [class*=" icon-"] {
