[#49110909] change link for the new mailling list

--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -49,9 +49,7 @@
       </div>
     </div>
   </div>
-  <div id="follow-project">
-    <a href="http://www.zone-project.org/mailing-list/"><img class="follow-project-picture" src="/imgs/follow_me.png" alt="Follow the project"></a>
-  </div>
+
 
 
   <div class="container">
@@ -62,7 +60,9 @@
   </div>
 
 <div class="footer">
-<%=  render "layouts/footer" %>
+  <%=  render "layouts/footer" %>
+  <%=  render "layouts/maillinglist" %>
 </div>
+
 </body>
 </html>
