--- a/ZONE-watcher/app/views/home/_search.html.erb
+++ b/ZONE-watcher/app/views/home/_search.html.erb
@@ -37,9 +37,7 @@
 
         <!-- go button-->
         <div class="text-center">
-          <div>
-            <button type="submit" class="center btn btn-success btn-large btn-primary goButton"><%= raw t 'search.searchbutton' %></button>
-          </div>
+          <button id="search-form-button" type="submit" class="center btn btn-success btn-large btn-primary goButton"><%= raw t 'search.searchbutton' %></button>
           <div>
             <% if @uriForItemsNumber != nil %>
               <span class="items-count">(<a href="<%= @uriForItemsNumber %>"><i class=" icon-refresh" id="number_items_wait"></i></a><span id='number_items_container'></span> items)</span>
@@ -51,7 +49,3 @@
   </div>
   <div class="span2"></div>
 </div>
-
-
-
-
