--- a/ZONE-watcher/app/views/home/_search.html.erb
+++ b/ZONE-watcher/app/views/home/_search.html.erb
@@ -1,6 +1,6 @@
 <div class="row" xmlns="http://www.w3.org/1999/html">
   <div class="span2"></div>
-  <div id="dino-logo" class="span3"><img src="assets/dino.png"/></div>
+  <div id="dino-logo" class="span3"><img src="/assets/dino.png"/></div>
   <div class="span5 ">
     <h1 class="triangle-border left"  id="reador-title"><%= raw t 'search.infobulle' %></h1>
 
