--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag params[:controller] %>
   <%= javascript_include_tag "search_box" %>
+  <%= javascript_include_tag "advanced_search" %>
   <%= csrf_meta_tags %>
   <%= javascript_include_tag("/bootstrap/js/bootstrap.min.js")%>
   <%= javascript_include_tag "/jquery.sexy-combo/jquery.sexy-combo.js" %>
