Changing all classes
Classes and id in french are now in english

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -56,11 +56,11 @@ div.flipper:hover div.back {
   visibility : visible;
 }
 
-.imageronde {
+.circleImage {
   border-radius: 25px;
 }
 
-.imagerondepetite {
+.littleCircleImage {
   border-radius: 7px;
 }
 
@@ -92,7 +92,7 @@ ul.sortable li {
 
 .overflowSource{
   overflow : auto;
-  max-height: 550px;
+  max-height: 440px;
 }
 
 .overflowSynonyme{
