change in the "more about reador"
French and english change

--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -32,7 +32,7 @@
             <%= raw t 'moreabout.opensource.content' %>
           </div>
           <div class="span4">
-            <h4><i class="icon-rss"></i><% t 'moreabout.rssfeed.title' %> </h4>
+            <h4><i class="icon-rss"></i><%= raw t 'moreabout.rssfeed.title' %> </h4>
             <%= raw t 'moreabout.rssfeed.content' %>
           </div>
           <div class="span4">
